GMenuModel: add annotations to virtual functions

Patch from Ted Gould.

https://bugzilla.gnome.org/show_bug.cgi?id=704931